--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.4",
-    "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.4.4",
     "@angular/compiler": "^4.4.4",
     "@angular/core": "^4.4.4",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.4.4",
     "@angular/http": "^4.4.4",
-    "@angular/material": "^2.0.0-beta.11",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.4.4",
     "@angular/platform-browser-dynamic": "^4.4.4",
     "@angular/platform-server": "^4.4.4",
@@ -29,7 +30,7 @@
     "@ngrx/effects": "^4.0.5",
     "@ngrx/store": "^4.0.3",
     "@ngrx/store-devtools": "^4.0.0",
-    "angularfire2": "^5.0.0-rc.1",
+    "angularfire2": "^5.0.0-rc.2",
     "apollo-angular": "^0.13.2",
     "apollo-client": "^1.9.3",
     "core-js": "^2.5.1",
@@ -41,13 +42,13 @@
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.4",
+    "@angular/cli": "1.4.5",
     "@angular/compiler-cli": "^4.4.4",
     "@angular/language-service": "^4.4.4",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.0.32",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "~3.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
