--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,12 @@ branches:
     - master
 
 before_script:
+  - yarn
   - npm install -g firebase-tools
   - npm install -g @angular/cli
 
 script:
-  - ng build --prod --aot
+  - yarn build
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
