--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0-beta.4",
+    "@angular/cli": "^1.4.8",
     "@angular/compiler-cli": "^5.0.0-rc.1",
     "@angular/language-service": "^5.0.0-rc.1",
     "@types/jasmine": "~2.6.0",
@@ -52,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "~5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
     "tslint": "~5.7.0",
