--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - npm install -g @angular/cli
 
 script:
-  - yarn build
+  - ng build
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN
