--- a/package.json
+++ b/package.json
@@ -24,25 +24,26 @@
     "@angular/platform-browser-dynamic": "^5.0.0-rc.1",
     "@angular/platform-server": "^5.0.0-rc.1",
     "@angular/router": "^5.0.0-rc.1",
-    "@ngrx/effects": "^4.0.0",
-    "@ngrx/router-store": "^4.0.0",
-    "@ngrx/store": "^4.0.0",
+    "@ngrx/effects": "^4.1.0",
+    "@ngrx/router-store": "^4.1.0",
+    "@ngrx/store": "^4.1.0",
     "bootstrap": "4.0.0-alpha.6",
     "angularfire2": "^5.0.0-rc.2",
     "core-js": "^2.5.1",
-    "firebase": "^4.5.1",
+    "firebase": "^4.6.0",
     "hammerjs": "^2.0.8",
     "node-sass": "^4.5.3",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.8",
+    "@angular/cli": "^1.4.9",
     "@angular/compiler-cli": "^5.0.0-rc.1",
     "@angular/language-service": "^5.0.0-rc.1",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.0.33",
+    "@types/node": "~8.0.46",
+    "api-ai-javascript": "^2.0.0-beta.21",
     "codelyzer": "~3.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,7 +56,7 @@
     "protractor": "~5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
-    "tslint": "~5.7.0",
+    "tslint": "~5.8.0",
     "typescript": "~2.5.3"
   }
 }
