--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "pwa": "ng build --prod && sw-precache --root=dist --config=precache-config.js"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.0.20",
     "@angular/animations": "^5.0.0-rc.1",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^5.0.0-rc.1",
@@ -27,8 +29,8 @@
     "@ngrx/effects": "^4.1.0",
     "@ngrx/router-store": "^4.1.0",
     "@ngrx/store": "^4.1.0",
-    "bootstrap": "4.0.0-alpha.6",
     "angularfire2": "^5.0.0-rc.2",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.1",
     "firebase": "^4.6.0",
     "hammerjs": "^2.0.8",
