--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "FireStarter",
-  "name": "Angular4 + Firebase Starter App",
+  "name": "Angular Material",
   "start_url": "/",
+  "gcm_sender_id": "103953800507",
   "theme_color": "#f48c5b",
   "background_color": "#ffffff",
   "display": "standalone",
