--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0-rc.1",
+    "@angular/animations": "^5.0.0",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^5.0.0-rc.1",
-    "@angular/compiler": "^5.0.0-rc.1",
-    "@angular/core": "^5.0.0-rc.1",
-    "@angular/forms": "^5.0.0-rc.1",
-    "@angular/http": "^5.0.0-rc.1",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
     "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^5.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.1",
-    "@angular/platform-server": "^5.0.0-rc.1",
-    "@angular/router": "^5.0.0-rc.1",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@ngrx/effects": "^4.1.0",
     "@ngrx/router-store": "^4.1.0",
     "@ngrx/store": "^4.1.0",
     "angularfire2": "^5.0.0-rc.2",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.1",
-    "firebase": "^4.6.0",
+    "firebase": "^4.6.1",
     "hammerjs": "^2.0.8",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.6.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^5.0.0-rc.1",
-    "@angular/language-service": "^5.0.0-rc.1",
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.0.47",
     "api-ai-javascript": "^2.0.0-beta.21",
-    "codelyzer": "~3.2.2",
+    "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -58,6 +58,6 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.5.3"
+    "typescript": "~2.6.1"
   }
 }
