--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@ngrx/store": "^4.1.0",
     "angularfire2": "^5.0.0-rc.2",
     "bootstrap": "4.0.0-alpha.6",
+    "contentful": "^5.0.2",
     "core-js": "^2.5.1",
     "firebase": "^4.6.1",
     "hammerjs": "^2.0.8",
+    "marked": "^0.3.6",
     "node-sass": "^4.6.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
