--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.2",
+    "@agm/core": "^1.0.0-beta.2",
+    "@angular/animations": "^5.0.5",
     "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.2",
-    "@angular/compiler": "^5.0.2",
-    "@angular/core": "^5.0.2",
-    "@angular/forms": "^5.0.2",
-    "@angular/http": "^5.0.2",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
     "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.2",
-    "@angular/platform-browser-dynamic": "^5.0.2",
-    "@angular/platform-server": "^5.0.2",
-    "@angular/router": "^5.0.2",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/platform-server": "^5.0.5",
+    "@angular/router": "^5.0.5",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
-    "angularfire2": "^5.0.0-rc.2",
+    "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "4.0.0-alpha.6",
-    "contentful": "^5.0.2",
+    "contentful": "^5.0.5",
     "core-js": "^2.5.1",
-    "firebase": "^4.6.2",
+    "firebase": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "marked": "^0.3.6",
-    "node-sass": "^4.6.1",
-    "rxjs": "^5.5.2",
+    "marked": "^0.3.7",
+    "node-sass": "^4.7.2",
+    "rxjs": "^5.5.3",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.2",
-    "@angular/compiler-cli": "^5.0.2",
-    "@angular/language-service": "^5.0.2",
+    "@angular/cli": "^1.5.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/language-service": "^5.0.5",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.0.53",
@@ -54,12 +55,12 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.6.1"
+    "typescript": "~2.6.2"
   }
 }
