--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.0.5",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/platform-server": "^5.0.5",
-    "@angular/router": "^5.0.5",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
@@ -37,16 +37,16 @@
     "hammerjs": "^2.0.8",
     "marked": "^0.3.7",
     "node-sass": "^4.7.2",
-    "rxjs": "^5.5.3",
+    "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.5",
-    "@angular/compiler-cli": "^5.0.5",
-    "@angular/language-service": "^5.0.5",
+    "@angular/cli": "^1.6.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.0.53",
+    "@types/node": "~8.0.56",
     "api-ai-javascript": "^2.0.0-beta.21",
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
@@ -57,7 +57,7 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.0",
+    "protractor": "~5.2.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
