--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
     "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
+    "@angular/forms": "^5.1.1",
     "@angular/http": "^5.1.0",
     "@angular/material": "^5.0.0",
     "@angular/platform-browser": "^5.1.0",
@@ -29,6 +29,8 @@
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
+    "@ngx-formly/core": "^2.0.0-rc.1",
+    "@ngx-formly/material": "^2.0.0-rc.1",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "4.0.0-alpha.6",
     "contentful": "^5.0.5",
