--- a/package.json
+++ b/package.json
@@ -14,55 +14,55 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.1.2",
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/platform-server": "^5.1.2",
-    "@angular/router": "^5.1.2",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/router-store": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "@ngx-formly/core": "^2.0.0-rc.3",
-    "@ngx-formly/material": "^2.0.0-rc.3",
-    "angularfire2": "^5.0.0-rc.4",
-    "bootstrap": "4.0.0-alpha.6",
-    "contentful": "^5.0.5",
+    "@angular/animations": "^5.2.8",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.8",
+    "@angular/compiler": "^5.2.8",
+    "@angular/core": "^5.2.8",
+    "@angular/forms": "^5.2.8",
+    "@angular/http": "^5.2.8",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.8",
+    "@angular/platform-browser-dynamic": "^5.2.8",
+    "@angular/platform-server": "^5.2.8",
+    "@angular/router": "^5.2.8",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/router-store": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngx-formly/core": "^2.0.0-rc.36",
+    "@ngx-formly/material": "^2.0.0-rc.36",
+    "angularfire2": "^5.0.0-rc.6",
+    "bootstrap": "4.0.0",
+    "contentful": "^5.1.3",
     "core-js": "^2.5.3",
-    "firebase": "^4.8.1",
+    "firebase": "^4.11.0",
     "hammerjs": "^2.0.8",
-    "marked": "^0.3.9",
+    "marked": "^0.3.17",
     "node-sass": "^4.7.2",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.2",
-    "@angular/compiler-cli": "^5.1.2",
-    "@angular/language-service": "^5.1.2",
-    "@types/jasmine": "~2.8.2",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.2.8",
+    "@angular/language-service": "^5.2.8",
+    "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.5.2",
+    "@types/node": "~9.4.7",
     "api-ai-javascript": "^2.0.0-beta.21",
-    "codelyzer": "~4.0.2",
-    "jasmine-core": "~2.8.0",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.2",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.8.0",
-    "typescript": "~2.6.2"
+    "protractor": "~5.3.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
